# reversi

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
reversi-bevy/: Cargo.toml
reversi-bevy/src/: fireworks.rs  main.rs  menu.rs
reversi-core/: Cargo.toml
reversi-core/src/application/: ai_move_use_case.rs  compute_available_moves_use_case.rs  evaluate_game_end_use_case.rs  mod.rs  move_use_case.rs  start_game_use_case.rs  use_case.rs
reversi-core/src/domain/: board.rs  directions.rs  mod.rs  player.rs
reversi-macroquad/: Cargo.toml
reversi-macroquad/src/: main.rs
reversi-macroquad/src/infrastructure/ui/: components.rs
reversi-macroquad/src/ui/: components.rs  fireworks.rs
src/: domain.rs  main.rs
src/application/: ai_move_use_case.rs  compute_available_moves_use_case.rs  evaluate_game_end_use_case.rs  mod.rs  move_use_case.rs  play_ai_move_use_case.rs  play_move_use_case.rs  player_move_use_case.rs  start_game_use_case.rs  use_case.rs
src/domain/: board.rs  directions.rs  player.rs
src/infrastructure/ui/: components.rs  mod.rs
